--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <label for='terms'>I accept the terms and conditions.</label>
             
         </form>
+            <h3>Következő fejezet</h3>
         </div>
 
 
