--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
             <label for='terms'>I accept the terms and conditions.</label>
             
         </form>
-            <h3>Következő fejezet</h3>
+            <div id ="closex">
+                x
         </div>
+        </div>
+        <h3>Következő fejezet</h3>
+    </div>
 
 
 </body>
