--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
                 Subscribe 
             </button>
             <input id='terms' type='checkbox'>
-            <label for='terms'>I accept the terms and conditions.</label>
+            <label for='terms'>I accept the <a href="http://" target="_blank">terms and conditions.</a></label>
             
         </form>
-            <div id ="closex">
-                x
+        <div id ="closex">
+          x
         </div>
-        </div>
-        <h3>Következő fejezet</h3>
     </div>
-
-
+    <h3>Következő fejezet</h3>
+</div>
 </body>
 </html>
